Source/WebCore: [Qt] number input not rendering spin buttons properly in RTL direction https://bugs.webkit.org/show_bug.cgi?id=67445

Properly render Qt's number input with RTL direction, and fix Plastique styling.

Patch by Jarred Nicholls <jarred@sencha.com> on 2011-09-02
Reviewed by Andreas Kling.

* platform/qt/RenderThemeQt.cpp:
(WebCore::RenderThemeQt::paintInnerSpinButton):

LayoutTests: [Qt] number input not rendering spin buttons properly in RTL direction
https://bugs.webkit.org/show_bug.cgi?id=67445

New baseline for Qt number input with RTL direction.

Patch by Jarred Nicholls <jarred@sencha.com> on 2011-09-02
Reviewed by Andreas Kling.

* platform/qt/fast/forms/input-appearance-number-rtl-expected.png:

Canonical link: https://commits.webkit.org/83328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94419 268f45cc-cd09-0410-ab3c-d52691b4dbfc